Fix: `Extensions` card alignment

--- a/src/modules/dashboard/components/Extensions/ExtensionCard.css
+++ b/src/modules/dashboard/components/Extensions/ExtensionCard.css
@@ -1,14 +1,25 @@
 @value lineHeight: 18px;
 
 .main {
+  display: inline-block;
+  margin: 0 20px 20px 0;
   height: 220px;
-  width: 250px;
+  width: 220px;
+}
+
+.main:nth-child(3) {
+  margin-right: 0;
+}
+
+.main:nth-last-child(1), .main:nth-last-child(2), .main:nth-last-child(3) {
+  margin-bottom: 0;
 }
 
 .card {
   display: block;
   padding: 16px 20px;
   height: 100%;
+  background-color: white;
   line-height: lineHeight;
   color: var(--dark);
   letter-spacing: 0.1px;
