--- a/src/modules/dashboard/components/Extensions/Extensions.css
+++ b/src/modules/dashboard/components/Extensions/Extensions.css
@@ -19,3 +19,7 @@
 .availableExtensionsWrapper {
   margin-top: 30px;
 }
+
+.cardList {
+  /* display: flex; */
+}
